--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.output.ansi.enabled=ALWAYS
 
 spring.datasource.username=root
 spring.datasource.password=jonas
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.main.allow-circular-references=true
